Begin to implement game flow

--- a/static/index.html
+++ b/static/index.html
@@ -1,4 +1,3 @@
 <title>Hat Game</title>
-<h1>Hat Game</h1>
-<input id='room' placeholder='room'></input>
-<input id='join' type='button' value='Join!'></input>
+<h1>The Hat Game</h1>
+<a href="/create">Create Game</a>
