--- a/static/join.html
+++ b/static/join.html
@@ -1,11 +1,9 @@
 <h1>Join a Game</h1>
 
-<form>
 <label>Game code:</label>
 <input type='text' id='code-text'></input>
 
 <label>Your name:</label>
 <input type='text' id='name-text'></input>
 
-<input type='submit' value='Join' id='join-button'></input>
-</form>
+<input type='button' value='Join' id='join-button'></input>
